--- a/sitemap.yml
+++ b/sitemap.yml
@@ -4,9 +4,9 @@
 
    <url>
 
-      <loc>https://jacqui.solidskill.us/</loc>
+      <loc>https://jacqui.live/</loc>
 
-      <lastmod>2023-06-29</lastmod>
+      <lastmod>2023-08-14</lastmod>
 
       <changefreq>monthly</changefreq>
 
